# habitat

./: .travis.yml  Cargo.toml
components/butterfly-test/src/: lib.rs
components/butterfly/protocols/: swim.proto
components/butterfly/src/: client.rs  member.rs  trace.rs
components/butterfly/src/message/: swim.rs
components/butterfly/src/rumor/: departure.rs  mod.rs
components/butterfly/src/server/: mod.rs  pull.rs  push.rs
components/butterfly/tests/rumor/: departure.rs
components/core/src/: fs.rs
components/eventsrv/src/: subscriber.rs
components/hab-butterfly/src/: cli.rs
components/hab/src/command/studio/: mod.rs
components/hab/src/command/sup/: mod.rs
components/launcher/: Cargo.toml
components/launcher-client/: Cargo.toml
components/launcher-client/src/: client.rs  error.rs  lib.rs  main.rs
components/launcher-protocol/: Cargo.toml
components/launcher-protocol/protocols/: launcher.proto
components/launcher-protocol/src/: lib.rs
components/launcher-protocol/src/message/: launcher.rs  mod.rs
components/launcher/src/: error.rs  lib.rs  main.rs  server.rs
components/launcher/src/os/unix/: mod.rs  process.rs
components/launcher/src/os/windows/: process.rs
components/launcher/src/supervisor/: child.rs
components/sup/src/: census.rs  lib.rs
components/sup/src/manager/: mod.rs
support/ci/: deploy_mac.sh  deploy_mac_launcher.sh
tools/project_create/: README.md  project_create.rb
www/: config.rb
www/source/layouts/: _nav.slim
